Fix contrast error navbar

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@
 
 .nav-link {
     color: #fff !important;
-    font-weight: 500;
+    font-weight: 700;
     transition: color 0.3s ease;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     letter-spacing: 0.05rem;
